[SpringBootCompany][Jeyem & Hannah] refactor: interchange company and service getByPage method